--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "googlephotos": "^0.3.5"
+    "googlephotos": "^0.3.5",
+    "p-limit": "^6.2.0"
   }
 }
