--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "node",
+  "name": "google-photos-downloader",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "build": "tsc",
+    "start": "DEBUG=* tsx src/index.ts",
     "test": "vitest run",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -17,14 +16,14 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.1"
   },
   "dependencies": {
+    "debug": "^4.4.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
-    "googleapis": "^148.0.0",
-    "googlephotos": "^0.3.5",
-    "p-limit": "^6.2.0"
+    "googlephotos": "^0.3.5"
   }
 }
